--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, laborum?</h1>
+    <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus a necessitatibus assumenda debitis nostrum exercitationem sequi architecto repellendus ipsam fugiat?</h2>
 </body>
 </html>
